[package]
build = "build.rs"
edition.workspace = true
exclude = ["artifacts.json", "index.node"]
license = "Apache-2.0"
name = "css_node"
publish = false
version = "0.1.0"

[lib]
bench = false
crate-type = ["cdylib"]

[features]

[build-dependencies]
napi-build = { workspace = true }

[dependencies]
anyhow = { workspace = true }
napi = { workspace = true, features = ["napi3", "serde-json"] }
napi-derive = { workspace = true, features = ["type-def"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
swc_atoms = { workspace = true }
swc_common = { workspace = true, features = ["sourcemap", "diagnostic-serde"] }
swc_css_ast = { workspace = true }
swc_css_codegen = { workspace = true }
swc_css_compat = { workspace = true }
swc_css_minifier = { workspace = true }
swc_css_modules = { workspace = true }
swc_css_parser = { workspace = true }
swc_css_visit = { workspace = true }
swc_error_reporters = { workspace = true }
swc_nodejs_common = { workspace = true }
tracing = { workspace = true, features = ["release_max_level_info"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
