[package]
build = "build.rs"
edition.workspace = true
exclude = ["artifacts.json", "index.node"]
license = "Apache-2.0"
name = "linter_node"
publish = false
version = "0.1.0"

[lib]
bench = false
crate-type = ["cdylib"]

[features]

[build-dependencies]
napi-build = { workspace = true }

[dependencies]
anyhow = { workspace = true }
napi = { workspace = true, features = ["napi3", "serde-json"] }
napi-derive = { workspace = true, features = ["type-def"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
swc_atoms = { workspace = true }
swc_common = { workspace = true, features = ["diagnostic-serde"] }
swc_ecma_ast = { workspace = true }
swc_ecma_lints = { workspace = true }
swc_ecma_minifier = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_transforms_base = { workspace = true }
swc_ecma_visit = { workspace = true }
swc_error_reporters = { workspace = true }
swc_nodejs_common = { workspace = true }
tracing = { workspace = true, features = ["release_max_level_info"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
